initial pass on azure blob storage + endpoint
